# AcademicManager

./: .gitignore  README.md  config-dev.ini  main.py  pyproject.toml  requirements.txt
academic_manager/: builder.py  constants.py
academic_manager/config/: settings.py
academic_manager/core/: __init__.py  file_manager.py  pdf_generator.py  project_manager.py  template_generator.py
academic_manager/models/: project.py
academic_manager/services/: aistudio_chat.py  bing_images.py  work.json
academic_manager/ui/: interface.py
