[project]
name = "academic_manager"
version = "0.1.0"
description = "Ferramenta Python com foco na geração de trabalhos acadêmicos em PDF."
authors = [
    {name = "cleiton",email = "cleiton.leonel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fpdf2 (>=2.8.3,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

